feat(PS_Scene): methods PS_OpenSceneFolder and PS_BackupScene added as File menu items

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,10 @@
 #
 !/ps/*
 !/PS_*.js
+
 script-icons/*
-!/script-icons/PS_*
+!/script-icons/PS_**
+
+packages/*
+!/packages/PS_**
+!/packages/PS_**.js
